getting the real videos in

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-{% for row in COPY.content %}
+{% for row in COPY.Doc %}
     {% include "%s.html"|format(row.template) ignore missing %}
 {% endfor %}
 </div>
