--- a/less/app.less
+++ b/less/app.less
@@ -9,7 +9,7 @@
 
 // General styles
 body {
-    font: 16px/1.5em Arial, Helvetica, sans-serif;
+    font: 16px/1.5em Georgia, serif;
     color: #111;
     -webkit-font-smoothing: antialiased;
     // background-color: black;
@@ -32,6 +32,9 @@ body {
         position: absolute;
         color: white;
         padding: 50px;
+        font-size: 72px;
+        line-height: 72px;
+        text-shadow: 2px 2px 2px rgba(0,0,0,.5);
     }
 
     .text.center {
@@ -61,6 +64,11 @@ body {
         bottom: 0; right: 0;
         text-align: right;
     }
+}
+
+.slide.image {
+    background-size: cover;
+    background-position: center center;
 }
 
 
@@ -143,10 +151,10 @@ html, body {
     overflow: scroll;
 }
 .easing {
-    -webkit-transition: all 0.7s ease-out;
-    -moz-transition: all 0.7s ease-out;
-    -o-transition: all 0.7s ease-out;
-    transition: all 0.7s ease-out;
+    -webkit-transition: all 0.75s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -moz-transition: all 0.75s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -o-transition: all 0.75s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: all 0.75s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 #fullPage-nav {
     position: fixed;
