--- a/templates/video-slide.html
+++ b/templates/video-slide.html
@@ -1,6 +1,6 @@
 <div class="slide video" data-anchor="{{ row.anchor }}">
     <div class="player">
-        <video src="{{ row.video }}" controls></video>
+        <video src="http://videoslider.knightlab.com.s3.amazonaws.com/{{ row.video }}.mp4" loop preload="metadata"></video>
 
         <div class="text {{row.position}}">
             {{ row.text }}
