--- a/less/app.less
+++ b/less/app.less
@@ -44,6 +44,9 @@ body {
         font-family: 'Times New Roman', serif;
         font-weight: bold;
         font-size: 36px;
+        background-color: rgba(0,0,0,.3);
+        border-radius: 5px;
+        padding: 10px;
     }
 
     .text.center {
