--- a/less/app.less
+++ b/less/app.less
@@ -81,6 +81,7 @@ body {
 .slide.image {
     background-size: cover;
     background-position: center center;
+    z-index: -200;
 }
 
 .controlArrow {
